--- a/.github/workflows/pysa.yml
+++ b/.github/workflows/pysa.yml
@@ -17,7 +17,7 @@ name: Pysa
 on:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: [ "develop" ]
   pull_request:
     branches: [ "master" ]
   schedule:
